  * update examples in "examples" directory
  * application directories (webapp, config, xsl) now copied to ${outputDirectory} during the "compile" phase
  * change default unittest ini files location to 'src/test/config/unittest'
  * move pth files handling to its own class
  * refactor "package" and "test-package" phases

 -- Marius Rosoiu <marius.rosoiu@1and1.ro> Fri, 19 Oct 2012

xp-maven-plugin (3.1.5)

  * use Maven output when displaying unittest results
  * remove ${xp.package.format} and replace it with ${project.packaging}
  * create just one pth file (project.pth) for "lib" ${xp.package.strategy}

 -- Marius Rosoiu <marius.rosoiu@1and1.ro> Tue, 25 Sep 2012

xp-maven-plugin (3.1.4)

  * fix the "test-package" goal

 -- Marius Rosoiu <marius.rosoiu@1and1.ro> Thu, 20 Sep 2012

xp-maven-plugin (3.1.3)

  * change artifact id from 'net.xp-framework:language' to 'net.xp-framework:compiler'

 -- Marius Rosoiu <marius.rosoiu@1and1.ro> Tue, 18 Sep 2012

xp-maven-plugin (3.1.2)

  * change default unittest ini files location to 'src/test/ini'
  * add ${project.classifier} property to specify project classifier

 -- Marius Rosoiu <marius.rosoiu@1and1.ro> Tue, 18 Sep 2012

xp-maven-plugin (3.1.1)

  * fix bootstrap when building XP-Framework itself
    - add ${xp.compile.phpIncludePattern} and ${xp.compile.testPhpIncludePattern}

 -- Marius Rosoiu <marius.rosoiu@1and1.ro> Tue, 24 Jul 2012

xp-maven-plugin (3.1.0)

  * add support for using isolated enviroment (use specific XP version)
    - setup classpath via .pth files not via -cp parameter
    - bootstraping via project dependencies
    - bootstraping via project resources (to build XP-Framework itself)
    - use separate classpath (project.pth) for each target: compile, test, xp

  * add support to build full applications zip
    - use java-xarlib instead of the "xar" XP-Runner to manipulate XAR archives
    - add support for reading/creating ZIP artifacts